# mechmetamat_homogenization

./: .gitignore  README.md  RVEdefinitionHEX.mat  RVEdefinitionSQR.mat  cm_hexagonal1_2024-05-22_14-23-52.891252_00.mat  compile_mex.m  main.m  reference_stiffness.m  sampling.m  sampling_mesh_convergence.m  save_special_nodes.m
fun/: add_default_options.m  back_renumber_vector.m  compute_d2UdF2.m  compute_dUdF.m  convert_RVEdata.m  create_renumbering_map.m  extract_periodic_boundary_rectangular_domain.m  get_FE2_internal_force_and_stiffness_NEW.m  get_cubic_fit.m  map_U_onto_selected_section_HEX.m  map_U_onto_selected_section_SQR.m  modchol_ldlt.m  perform_full_line_search.m  perform_polar_decomposition.m  plot_initial_and_final_configuration.m  renumber_F_and_K.m  sample_U.m  solve_nonlinear_system.m  transformer.m
mex/: build_extended_grad_hess_TLF2d_wOptimQuadrature.mexw64  build_grad_hess_TLF2d_wOptimQuadrature.mexw64
mex/src/interface/: CMakeLists.txt  build_grad_hess_TLE2d.cpp  build_grad_hess_TLE3d.cpp  build_grad_hess_TLF2d.cpp  build_grad_hess_TLF3d.cpp  build_grad_hess_stab_TLE2d.cpp  build_inclusions_2d.cpp  build_inclusions_3d.cpp  build_kinematic_averages.cpp  build_mass_matrix_2d.cpp  build_phi_ho_2d.cpp  build_phi_ho_3d.cpp  micromorphic_closed.cpp  micromorphic_computational.cpp  micromorphic_computational_now.cpp  my_linsolve.cpp  sample_UES_2d.cpp  sample_UES_3d.cpp  sample_UFP_2d.cpp  sample_UFP_3d.cpp  (+6 more)
mex/src/myfem/: CMakeLists.txt  hexahedron20.nb  hexahedron27.nb
mex/src/myfem/include/: myfem.h
mex/src/myfem/src/: myfem.cpp
(+2 files in other folders)
